fixed overlapping border

--- a/mobile.css
+++ b/mobile.css
@@ -502,6 +502,7 @@ footer {
   display: grid;
   justify-items: center;
   align-items: center;
+  padding: 1em 0;
 }
 
 /*-----1.card flipping-----------*/
@@ -511,7 +512,7 @@ footer {
   perspective: 600;
   position: relative;
   width: 150px;
-  /* padding: 15px; */
+  margin: 1em;
 }
 
 .card {
@@ -655,7 +656,6 @@ footer {
   /* Menu */
   .card-container {
     width: 90%;
-    margin: 20px;
   }
   .menu-item {
     border-width: 10px;
